Expose the server host in the deployment config too for gwt access

--- a/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
+++ b/src/java/com/threerings/msoy/data/all/DeploymentConfig.java.tmpl
@@ -20,6 +20,9 @@ public class DeploymentConfig
     /** The URL from which we should make service requests. */
     public static final String serverURL = "@server_url@";
 
+    /** The hostname of the server. */
+    public static final String serverHost = "@server_host@";
+
     /** The URL via which we should load our media. */
     public static final String mediaURL = "@media_url@";
 
