Maybe there's a special rule that only expands $Id$ for certain file types.

--- a/src/as/com/threerings/msoy/client/world.mxml
+++ b/src/as/com/threerings/msoy/client/world.mxml
@@ -1,4 +1,6 @@
-<!-- $Id$
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+  $Id$
 -->
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" xmlns="*"
     layout="absolute" styleName="plain"
