--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -478,9 +478,47 @@
    NEW SHARE PAGE
 -------------------------------------*/
 
+.sharePanel-wrapper {
+	border-spacing: 0px;
+}
+
 .sharePanel {
 	width: 675px;
-	padding: 5px;
+	padding: 5px;	
+}
+
+.sharePanel-header {
+	font-size: 17px;
+	color: #2c4969;
+}
+
+.sharePanel-banner {
+	width: 682px;
+	height: 95px;
+	background: url(/images/people/invite/invite_banner.jpg) no-repeat;
+}
+
+.sharePanel-url-description {
+	width: 337px;
+	height: 33px;
+	background: url(/images/people/invite/bubble_arrow.png) no-repeat;
+	font-size: 11px;
+	color: #2c4969;
+	padding: 3px 10px 3px 5px;
+}
+
+.sharePanel-embed-description {
+    width: 337px;
+    height: 33px;
+    background: url(/images/people/invite/bubble_arrow.png) no-repeat;
+    font-size: 11px;
+    color: #2c4969;
+    padding: 3px 10px 3px 5px;
+    margin-bottom: 15px;
+}
+	
+.shareGameInfo {
+	height: 90px;
 }
 
 .shareGameInfo .thumbnail {
@@ -518,11 +556,13 @@
 .shareURLBox-closed {
     background: url(/images/people/invite/blue_optionsclosed.png) no-repeat;
     height: 116px;
+    margin-bottom: 5px;
 }
 
 .shareURLBox-open {
     background: url(/images/people/invite/blue_optionsopen.png) no-repeat;
     height: 196px;
+    margin-bottom: 5px;
 }
 
 .shareURLBox .urlPanel {
@@ -638,7 +678,7 @@
 }
 
 .inviteEmailPanel .gwt-TabPanel {
-	width: 459px;
+	width: 439px;
 }
 
 .inviteEmailPanel .gwt-TabBarItem {
@@ -715,7 +755,7 @@
 }
 
 .inviteEmailPanel .emailTab-input {
-	width: 435px;
+	width: 405px;
 	height: 50px;
 	border: 1px solid #cccccc;
 	padding: 5px;
@@ -733,7 +773,7 @@
 }
 
 .importContacts-textBox {
-	width: 180px;
+	width: 170px;
 	border: 1px solid #cccccc;
 	padding: 5px;
     font-family:Arial,Helvetica,sans-serif;
