Add Design Your Whirled contest winners to the main #rooms page.  Winning sceneIds are listed in a new server property for now.  We'll move these to a new repository that support staff can edit if we decide to keep doing these contests and keep displaying the results here.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -310,7 +310,8 @@ img, embed, applet, object {
   height: 28px;
 }
 
-.tongueBox .THeader .Base, .tongueBox .THeader .Base .BaseContents .BaseText {
+.tongueBox .THeader .Base, 
+.tongueBox .THeader .Base .BaseContents .BaseText {
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   font-size: 16px;
   font-weight: bold;
@@ -318,6 +319,10 @@ img, embed, applet, object {
   color: white;
 }
 
+.tongueBox .THeader .Base a {
+  color: white;
+}
+  
 .tongueBox .THeader .Base .BaseContents .BaseText {
   padding-left: 10px;
 }
