--- a/src/gwt/public/rooms/rooms.css
+++ b/src/gwt/public/rooms/rooms.css
@@ -86,6 +86,18 @@
   overflow-x: hidden;
 }
 
+.designWinnersPanel .Blurb {
+  font-family: "Trebuchet MS",Arial,Helvetica,sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #FFFFFF;
+  margin: 10px 100px;
+}
+
+.designWinnersPanel .Blurb a {
+  color: #FFFFFF;
+}
+
 .designWinnersPanel .Winners {
   background: url(/images/rooms/design_winners_box_bg.png) no-repeat;
   width: 646px;
