Some more blue bits. This is all a little grafted-on, but I don't think we need a whole lot of blue button support anywhere other than in the buy panel...

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -84,6 +84,15 @@ img, embed, applet, object {
   white-space: nowrap;
 }
 
+.blueButton {
+  border: none;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  text-align: center;
+  white-space: nowrap;
+}
+
 .backButton {
   background-image: url(/images/ui/back.png);
   width: 29px;
