A bit of UI love for room buying.

--- a/src/gwt/public/money/money.css
+++ b/src/gwt/public/money/money.css
@@ -4,6 +4,12 @@
  * CSS styles for the Money interfaces.
  */
 
+.BuyPrompt {
+  font-size: 20px;
+  font-weight: bold;
+  white-space: nowrap;
+}
+
 .Buy {
   text-align: center;
 }
