Created a simple .imageButton style if you want to set the image in code.

--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -547,6 +547,7 @@ TabNavigator, TabBar {
 }
 
 /** All these buttons use the ImageButtonSkin and need the per-state skins cleared out. */
+.imageButton,
 .controlBarButtonChat, .controlBarButtonEdit, .controlBarButtonZoom, .controlBarButtonComment,
 .controlBarButtonInstructions, .controlBarButtonShare, .controlBarButtonScores,
 .controlBarHoverZone, .controlBarButtonSnapshot, .controlBarFriendButton, .controlBarTalkButton,
