90% of email validation. Need to implement the servlet that actually accepts the validation and tidy up a niggle or two. Hopefully tomorrow will be a break from my recent cycle of "spend all morning and afternoon in meetings then do two hours of real work".

--- a/src/gwt/public/account/account.css
+++ b/src/gwt/public/account/account.css
@@ -129,6 +129,11 @@
   font-size: 14px;
 }
 
+.editAccount .Warning {
+  font-weight: bold;
+  color: #990000;
+}
+
 .editAccount .FBLink img {
   margin: 0;
 }
