More email validation propriety. Always with the first 90% and the last 90%.

--- a/rsrc/email/revalidateEmail.tmpl
+++ b/rsrc/email/revalidateEmail.tmpl
@@ -3,7 +3,7 @@ Hello,
 
 You can validate your Whirled account (registered to $email) by clicking on the link below:
 
-${server_url}#account-validate_${memberId}_${code}
+${server_url}#account-v_${memberId}_${code}
 
 Once you have validated your address, you will have full access to all of
 Whirled's fabulous features!
