Send everyone the welcome email and put the validation link therein.

--- a/rsrc/email/welcome.tmpl
+++ b/rsrc/email/welcome.tmpl
@@ -2,7 +2,11 @@ Welcome to Whirled, ${name}
 
 Your Whirled login is: ${email}
 
-Congratulations on joining the player-created virtual world!
+Congratulations on joining the player-created virtual world! To get started,
+you need to validate your email address by clicking this link:
+
+${server_url}#account-v_${memberId}_${code}
+
 We've given you 1,000 coins to get you started, now here's all the fun things you can do:
 
 Play Games
