Fix account-edit link.

--- a/rsrc/email/welcome.tmpl
+++ b/rsrc/email/welcome.tmpl
@@ -43,7 +43,7 @@ or the  Whirled Wiki : http://wiki.whirled.com/ for more detailed info.
 You are receiving this because your email address was used to
 register at ${server_url}.
 
-Unsubscribe from Whirled email: ${server_url}#me-account
+Unsubscribe from Whirled email: ${server_url}#account-edit
 Terms of Service: http://wiki.whirled.com/Terms_of_Service
 Privacy Policy : http://www.threerings.net/about/privacy.html
 
