Make our share button use the same imagery as we do in Flash and look like the favorite button. Then we can put it next to the favorite button in all situations and have a UI that makes sense and looks good. For the win.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -735,6 +735,13 @@ img, embed, applet, object {
   background: #6699CC;
 }
 
+.shareBox {
+  font-size: 12px;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+}
+
 .StyledTabs .gwt-TabBar {
   background: url(/images/ui/tabs/anchor_tile.png) repeat-x bottom;
 }
