Consolidated and cleaned up the various links to the billing system. Now they all go through one place which will shortly ensure that the member has a non-placeholder email address.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -439,6 +439,10 @@
   padding-bottom: 5px;
 }
 
+.transactions .Blurb .BillingTip .orangeButton {
+  margin: 10px auto 0px auto;
+}
+
 .transactions .Balance .row1 {
   background: #dbeffc;
 }
