--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -362,13 +362,13 @@
   text-align: left;
 }
 
-.invite .InviteList {
+.invite .InviteList, .gameInvitePanel .email .InviteList {
   width: 100%;
   border: 1px solid #316C94;
   background: #E9F6FB;
 }
 
-.invite .InviteList .Header {
+.invite .InviteList .Header, .gameInvitePanel .email .InviteList .Header {
   height: 20px;
   color: #316C94;
   font-weight: normal;
@@ -377,20 +377,20 @@
   padding: 5px;
 }
 
-.invite .InviteList .Scroll {
+.invite .InviteList .Scroll, .gameInvitePanel .email .InviteList .Scroll {
   height: 130px;
   background: #FFFFFF;
   width: 100%;
 }
 
-.invite .InviteListTable {
+.invite .InviteListTable, .gameInvitePanel .email .InviteListTable {
   background: #FFFFFF;
   font-size: 12px;
   color: #316C94;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
-.invite .InviteListTable td {
+.invite .InviteListTable td, .gameInvitePanel .email .InviteListTable td {
   padding: 1px 5px;
 }
 
@@ -907,4 +907,54 @@
     color: #7e7f84;
     width: 383px;
     font-size: 13px;
+}
+
+/* -------------------------------
+  GameInvitePanel
+ --------------------------------- */
+
+.gameInvitePanel {
+    font-size: 12px;
+}
+
+.gameInvitePanel .intro {
+    font-weight: bold;
+    font-size: 14px;
+    width: 75%;
+}
+
+.gameInvitePanel .methodButton {
+}
+
+.gameInvitePanel .email .privacy, .gameInvitePanel .email .ImportSupportLink {
+    font-size: 10px;
+}
+
+.gameInvitePanel .email .toggle {
+    text-align: right;
+    font-size: 10px;
+}
+
+.gameInvitePanel .email .biglabel {
+    color: #2356bf;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.gameInvitePanel .email .smalllabel {
+    color: #404040;
+}
+
+.gameInvitePanel .email .labelparen {
+   color: #303030;
+   font-size: 10px;
+   width: 90%;
+}
+
+.gameInvitePanel .email .input {
+    border: 1px solid #cccccc;
+}
+
+.gameInvitePanel .email .message {
+    width: 100%;
 }
