- Put the info hoverzone first, ditch having the same tip on the info label - Make the tip text bigger, on a white background.
And then there was much fucking around. I got the bigger tip to work
by jiggling the text. So I tried to fix the old issue with a bigger
font on furni tooltips, but no-go. Maybe if I react to the TOOL_TIP_SHOWN
event there too?

--- a/rsrc/css/msoy.css
+++ b/rsrc/css/msoy.css
@@ -1043,11 +1043,16 @@ ChatInput {
 }
 
 .roomToolTip {
-/** Crap, the fontSize=12 seems to fuck-up the background of the tooltip.
-    Something to debug later.
+  /** Sheeit I still can't force these tips to look good with a bigger font, even
+    though I can hack it for gameInfoTip. Another time.
   fontSize: 12;
   */
   backgroundColor: #000000;
+}
+
+.gameInfoTip {
+  fontSize: 12;
+  backgroundColor: #FFFFFF;
 }
 
 .contentsBox, .titleBox, .infoBox {
