Add a "I am not an asshole" checkbox to the comment posting interface. Turned it into a popup while I was in there and cleaned up few bits.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -961,6 +961,10 @@ img, embed, applet, object {
   font-size: 11px;
 }
 
+.PostComment {
+  padding: 15px 15px 0px 15px;
+}
+
 /** MessagePanel styles */
 .messagePanel .Photo {
   background: #EDEDED;
