Implement opting out for game invites. Annoying, but has to be done.

--- a/rsrc/email/gameInvite.tmpl
+++ b/rsrc/email/gameInvite.tmpl
@@ -23,4 +23,4 @@ ${url}
 If you would prefer not to receive any more invitations to Whirled from your friends,
 please visit this link:
 
-${server_url}#account-optoutemail_${to}
+${server_url}#account-optoutg_${invite_id}
