Two validation improvements: 1. Use /go to avoid having a # in the URL which some mail readers awesomely choke on. 2. Request that the user copy and paste if they have problems.

--- a/rsrc/email/revalidateEmail.tmpl
+++ b/rsrc/email/revalidateEmail.tmpl
@@ -3,7 +3,10 @@ Hello,
 
 You can validate your Whirled account (registered to $email) by clicking on the link below:
 
-${server_url}#account-v_${memberId}_${code}
+${server_url}go/account-v_${memberId}_${code}
+
+If you have problems clicking on the link, please copy the entire URL and paste
+it into your browser.
 
 Once you have validated your address, you will have full access to all of
 Whirled's fabulous features!
